# yolo_lizi

./: CMakeLists.txt  LICENSE  Readme.md  package.xml
include/: object_detection_yolo.cpp  object_detection_yolo.h
launch/: camera_driver.launch  glove.launch  yolo.launch
ric_imu_glove/: ric_imu_glove.ino
scripts/: glove_node.py
src/: camera_driver.cpp  yolo_node.cpp
